charts/umbrella/smtp/smtp-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: smtp4dev
spec:
  selector:
    app: smtp4dev
  ports:
    - name: smtp
      protocol: TCP
      port: 25
      targetPort: 25
    - name: http
      protocol: TCP
      port: 80
      targetPort: 80
